docs(readme): add headless mode section + bump JAR refs to 0.2.0 (#18)
- Document Recaf's native --headless flag for CI/container workflows
- Note JavaFX modules must remain on module-path (CDI scan), but no
  display server / Monocle native libs are needed
- Boot ~2.1s, RSS ~875MB (33% less than full UI), all 3 v0.2.0 tools
  respond over HTTP
- Update download/copy commands to reference recaf-mcp-plugin-0.2.0.jar

Co-authored-by: tha23rd <zgbluhm@gmail.com>